# MaketingAgent

./: .env.example  .gitignore  Constraint.md  README.md  main.py  pyproject.toml  pytest.ini
api/: __init__.py  middleware.py  routes.py  schemas.py
config/: settings.py
core/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
core/llm/: __init__.py  client.py  tracing.py
core/tools/: __init__.py  sensitive.py
data/: marketing.db
docs/: ARCHITECTURE.md  PRD.md  user.md
observability/: __init__.py  logger.py
services/: __init__.py  workflow_service.py
storage/: __init__.py  database.py  models.py  repository.py
tests/: test_nodes.py  test_sanitize.py  test_state.py
ui/: streamlit_app.py
