[project]
name = "marketing-agent"
version = "0.1.0"
description = "营销内容自动生成 Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "loguru>=0.7.0",
    "sseclient-py>=1.0.0",
    "slowapi>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "storage", "api", "config", "ui", "observability"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
